@startuml

title __SECURITY's Class Diagram__\n

  namespace edu.pfe.staffing {
    namespace security {
      class edu.pfe.staffing.security.JwtAuthenticationEntryPoint {
          + commence()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace security {
      class edu.pfe.staffing.security.JwtRequestFilter {
          # doFilterInternal()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace security {
      class edu.pfe.staffing.security.JwtTokenUtil {
          {static} + JWT_TOKEN_VALIDITY : long
          - secret : String
          {static} - serialVersionUID : long
          + generateToken()
          + getClaimFromToken()
          + getExpirationDateFromToken()
          + getUserEmailFromToken()
          + getUsernameFromToken()
          + validateToken()
          - doGenerateToken()
          - getAllClaimsFromToken()
          - isTokenExpired()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace security {
      class edu.pfe.staffing.security.OpenAPIConfiguration {
          + customizeOpenAPI()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace security {
      class edu.pfe.staffing.security.SecurityConfiguration {
          + authenticationManagerBean()
          + configureGlobal()
          + passwordEncoder()
          # configure()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace security {
      class edu.pfe.staffing.security.UserDetailsServiceImpl {
          + loadUserByUsername()
      }
    }
  }
  

  edu.pfe.staffing.security.JwtAuthenticationEntryPoint .up.|> java.io.Serializable
  edu.pfe.staffing.security.JwtAuthenticationEntryPoint .up.|> org.springframework.security.web.AuthenticationEntryPoint
  edu.pfe.staffing.security.JwtRequestFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  edu.pfe.staffing.security.JwtRequestFilter o-- edu.pfe.staffing.security.UserDetailsServiceImpl : UserDetailsServiceImpl
  edu.pfe.staffing.security.JwtRequestFilter o-- edu.pfe.staffing.security.JwtTokenUtil : jwtTokenUtil
  edu.pfe.staffing.security.JwtTokenUtil .up.|> java.io.Serializable
  edu.pfe.staffing.security.SecurityConfiguration -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  edu.pfe.staffing.security.SecurityConfiguration o-- edu.pfe.staffing.security.JwtAuthenticationEntryPoint : jwtAuthenticationEntryPoint
  edu.pfe.staffing.security.SecurityConfiguration o-- edu.pfe.staffing.security.JwtRequestFilter : jwtRequestFilter
  edu.pfe.staffing.security.SecurityConfiguration o-- edu.pfe.staffing.security.UserDetailsServiceImpl : userDetailsServiceImpl
  edu.pfe.staffing.security.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  edu.pfe.staffing.security.UserDetailsServiceImpl o-- edu.pfe.staffing.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
